--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -80,6 +80,12 @@
   margin: 2.5rem auto;
 }
 
+@media screen and (max-width: 600px) {
+  .cardSize .cardImgContainer .cardImg {
+    height: 15vh;
+  }
+}
+
 .submit-btn {
   background: #adc3b6;
   color: white;
@@ -128,6 +134,12 @@
 
 .taskColor {
   color: #517470;
+}
+
+@media screen and (max-width: 600px) {
+  h3 {
+    font-size: 1.25rem;
+  }
 }
 
 a {
@@ -179,7 +191,7 @@ input[type="checkbox"]:checked ~ .content span.taskName {
   text-decoration: line-through;
   -webkit-text-decoration-color: black;
           text-decoration-color: black;
-  color: #9D9D9D;
+  color: #9d9d9d;
 }
 
 input[type="checkbox"]:checked:after {
