--- a/views/tasks/edit.ejs
+++ b/views/tasks/edit.ejs
@@ -17,12 +17,15 @@
                             <div class="row mb-3">
                                 <div class="col">
                                     <label for="deadline" class="col-form-label">Deadline</label>
-                                    <input type="datetime-local" class="form-control" name="task[deadline]"
-                                        id="deadline" min="<%=today %>" <% if (task.deadline) { %>
-                                    value="<%=`${task.deadline.getFullYear()}-${String(task.deadline.getMonth() +
-                                        1).padStart(2, '0' )}-${String(task.deadline.getDate()).padStart(2, '0'
-                                        )}T${String(task.deadline.getHours()).padStart(2, '0'
-                                        )}:${String(task.deadline.getMinutes()).padStart(2, '0' )}`%>" <% } %>>
+                                    <% let now=new Date() %>
+                                        <input type="datetime-local" class="form-control" name="task[deadline]"
+                                            id="deadline" min="<%= ( now < task.deadline) ? now : task.deadline %>" <%
+                                            if (task.deadline) { %>
+                                        value="<%=`${task.deadline.getFullYear()}-${String(task.deadline.getMonth() +
+                                            1).padStart(2, '0' )}-${String(task.deadline.getDate()).padStart(2, '0'
+                                            )}T${String(task.deadline.getHours()).padStart(2, '0'
+                                            )}:${String(task.deadline.getMinutes()).padStart(2, '0' )}`%>"
+                                            <% } %>>
                                 </div>
                                 <div class="col">
                                     <label for="priority" class="col-form-label req-asterik">Priority</label>
@@ -30,7 +33,8 @@
                                         <% for(let priority of priorities) { %>
                                             <option value="<%=priority%>" <% if (task.priority===priority ) { %>
                                                 selected
-                                                <% } %>><%= priority[0].toUpperCase() + priority.substring(1) %>
+                                                <% } %>>
+                                                    <%= priority[0].toUpperCase() + priority.substring(1) %>
                                             </option>
                                             <% } %>
                                     </select>
